rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-vector3values__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: "1337, -1337, 0"
  class: Vector3Value
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Vector3:
        - 1337
        - -1337
        - 0
  children: []
- referent: referent-1
  name: "0.15625, -0.15625, 0.1"
  class: Vector3Value
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Vector3:
        - 0.15625
        - -0.15625
        - 0.1
  children: []
- referent: referent-2
  name: "inf, -inf, nan"
  class: Vector3Value
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Vector3:
        - inf
        - -inf
        - NaN
  children: []
